# sarscov2-infectiousness

./: CITATION.cff  LICENSE  README.md  README.md.bak  pyproject.toml  upgrade_to_subpackages.py  write_docs.py
docs/: api.md  distance.md  index.md  infectiousness.md  installation.md  linkage.md  quickstart.md
src/sarscov2_infectiousness/: __init__.py  variable_model.py
src/sarscov2_infectiousness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sarscov2_infectiousness/distance/: __init__.py  tn93.py
src/sarscov2_infectiousness/infectiousness/: __init__.py
src/sarscov2_infectiousness/linkage/: __init__.py  transmission_linkage_model.py
tests/: test_linkage.py  test_toit.py  test_tost.py  tests.py
